[tool.poetry]
name = "psp-backend"
version = "0.1.0"
description = ""
authors = ["shakira 0nline <email@example.com>"]
package-mode = false  # Add this line

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.104.1"
uvicorn = {extras = ["standard"], version = "0.24.0"}
python-multipart = "0.0.6"
python-jose = {extras = ["cryptography"], version = "3.3.0"}
passlib = {extras = ["bcrypt"], version = "1.7.4"}
sqlalchemy = "2.0.23"
aiohttp = "3.9.1"
aiosqlite = "0.19.0"
pydantic = "1.10.12"
python-dotenv = "1.0.0"
pyjwt = "2.8.0"
email-validator = "2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
